--- a/Whisko.Server/Whisko.Server.csproj
+++ b/Whisko.Server/Whisko.Server.csproj
@@ -34,6 +34,7 @@
     <Folder Include="Middlewares\" />
     <Folder Include="Models\DTOs\" />
     <Folder Include="Models\Enums\" />
+    <Folder Include="Models\Entities\" />
     <Folder Include="Models\ResponseModels\" />
     <Folder Include="Models\RequestModels\" />
     <Folder Include="Services\" />
